--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,9 +1,10 @@
 name: Release Charts
 
 on:
+  workflow_dispatch:
   push:
     branches:
-      - master
+      - main
     paths:
       - 'charts/**'
 
@@ -18,6 +19,6 @@ jobs:
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
       - name: Run chart-releaser
-        uses: helm/chart-releaser-action@master
+        uses: helm/chart-releaser-action@main
         env:
           CR_TOKEN: '${{ secrets.CR_TOKEN }}'
