--- a/charts/homepage/templates/ingressroute.yaml
+++ b/charts/homepage/templates/ingressroute.yaml
@@ -1,4 +1,5 @@
 ---
+{{ if .Values.enableIngressRoute }}
 {{- $fullName := include "homepage.fullname" . -}}
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
@@ -31,3 +32,5 @@ spec:
               secure: true
               sameSite: none
     {{- end}}
+
+{{ end }}
