--- a/charts/homepage/values.yaml
+++ b/charts/homepage/values.yaml
@@ -20,16 +20,17 @@ image:
   repository: ghcr.io/gethomepage/homepage
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  # tag: "0.9.0"
+  tag: "0.9.10"
 
 service:
   type: ClusterIP
   port: 3000
 
+enableIngressRoute: false
 ingressRoute:
   rules:
     # Specifies the host used inside the ingressroute
-    - host: homepage.ghimele.com
+    - host: homepage.com
 
   # Specifies the secret used inside the ingressroute
   annotations: {}
@@ -91,4 +92,4 @@ volumes:
   - name: logs
     emptyDir: {}
 
-
+enableConfigMap: false
