--- a/charts/homepage/values.yaml
+++ b/charts/homepage/values.yaml
@@ -20,7 +20,7 @@ image:
   repository: ghcr.io/gethomepage/homepage
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "0.9.10"
+  tag: "v0.9.10"
 
 service:
   type: ClusterIP
