--- a/charts/igotify/templates/deployment.yaml
+++ b/charts/igotify/templates/deployment.yaml
@@ -19,8 +19,13 @@ spec:
         #  app.kubernetes.io/name: igotify
         {{- include "igotify.labels" . | nindent 8 }}
     spec:
+      {{- with .Values.imagePullSecrets }}
+      imagePullSecrets:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       serviceAccountName: {{ include "igotify.serviceAccountName" . }}
-      automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
+      securityContext:
+        {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: {{ include "igotify.fullname" . }}
           image: {{ .Values.image.repository}}:{{ .Values.image.tag | default .Chart.AppVersion }}
