fix: removed liveness and rediness probe

--- a/charts/igotify/templates/deployment.yaml
+++ b/charts/igotify/templates/deployment.yaml
@@ -51,14 +51,14 @@ spec:
             - name: http
               containerPort: 80
               protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /health
-              port: http
-          readinessProbe:
-            httpGet:
-              path: /health
-              port: http
+          # livenessProbe:
+          #   httpGet:
+          #     path: /health
+          #     port: http
+          # readinessProbe:
+          #   httpGet:
+          #     path: /health
+          #     port: http
           volumeMounts:
             - name: {{ include "igotify.fullname" . }}-data
               mountPath: /app/data
