--- a/charts/igotify/templates/service.yaml
+++ b/charts/igotify/templates/service.yaml
@@ -10,7 +10,7 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: 8080
       protocol: TCP
       name: http
   selector:
